# synthmoon

./: .gitattributes  .gitignore  0001_add_layer5_only_flag.patch  0002_make_layer_names_consistent.patch  CHANGELOG.md  DOTHIS  PATCH10_NOTES.txt  PATCH11_NOTES.txt  PATCH12_NOTES.txt  PATCH13_NOTES.txt  PATCH14_NOTES.txt  PATCH15_NOTES.txt  PATCH16_NOTES.txt  PATCH17_NOTES.txt  PATCH20_NOTES.txt  PATCH21_NOTES.txt  PATCH23_NOTES.txt  PATCH25_NOTES.txt  PATCH4_NOTES.txt  PATCH7_NOTES.txt  PATCH8_NOTES.txt  PATCH9_NOTES.txt  README.md  README.txt  README_APPLY.txt  README_EARTH_WORKFLOW.md  README_PANIC_WHATNOW.md  README_RESUME_WORK.md  apply_layer5_only.py  go_movie_make_PTH.sh  go_render_a_pair_with_EO.sh  husk.resume  husk.resume.hjemme  out  panic_run_v0_1.sh  pyproject.toml  read_layer5_ratios.py  read_layer5_ratios_with_sublunar_plot.py  read_radtot_lon_lat_boxes_with_sublunar_plot.py  run_layer5_hourly.sh  (+5 more)
.codex/: AGENTS.md
DATA/: earth_albedo.fits  moon_albedo_lroc_wac643_016ppd_mean0p12.fits
EXPLAINER/: README.txt  SPEC.md  context_capsule.txt  scene.toml  write_project_files.py
KERNELS/: generic.tm
OUTPUT/: synth_moon_v0.fits
docs/: earth_colour_concept_notes.md  synthmoon_image_production.tex
scripts/: download_kernels.py  download_lola_ldem16_dem.py  download_lola_ldem_dem.py  download_lroc_wac_albedo_map.py  make_earth_albedo_fits.py  render_sequence_hourly.py
synthmoon/: __init__.py  albedo_maps.py  camera.py  config.py  earth_rgb_fast.py  earth_rgb_physical.py  fits_io.py  illumination.py  intersect.py  moon_dem.py  orography.py  run_v0.py  (+4 more)
(+35 files in other folders)
