[project]
name = "synthmoon"
version = "0.3.0"
description = "Synthetic lunar images with sunlight/earthlight and advanced-vs-legacy comparison outputs."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23",
  "astropy>=5.0",
  "spiceypy>=6.0",
  "pillow>=10.0",
  "matplotlib>=3.10.8",
]

[project.scripts]
synthmoon-render = "synthmoon.run_v0:main"
